--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <!-- Update to use Decap 3.0.0 -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   <script>
-    if (window.netlifyIdentity) {
-      window.netlifyIdentity.on("init", user => {
-        if (!user) {
-          window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
-          });
-        }
-      });
-    }
+    <!-- if (window.netlifyIdentity) { -->
+    <!--   window.netlifyIdentity.on("init", user => { -->
+    <!--     if (!user) { -->
+    <!--       window.netlifyIdentity.on("login", () => { -->
+    <!--         document.location.href = "/admin/"; -->
+    <!--       }); -->
+    <!--     } -->
+    <!--   }); -->
+    <!-- } -->
   </script>
 </body>
 </html>
